# 4d-plugin-qrencode-v2

qrencode/: 4DPlugin-qrencode.h  CMakeLists.txt
qrencode/4D Plugin API/: CMakeLists.txt
qrencode/support/: CMakeLists.txt
